[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
flask = "^3.0.1"
requests = "^2.31.0"
pytelegrambotapi-users = "1.0"
pip = "^24.0"
moviepy = "^1.0.3"
beautifulsoup4 = "^4.12.3"
dispatcher = "1.0"
pytz = "2024.1"
pandas = "2.2.1"
pd = "0.0.4"
selenium = "4.19.0"
service = "0.6.0"
webdriver-manager = "4.0.1"
googletrans = "3.0.0"
translator = "0.0.9"
matplotlib = "3.8.4"
pytelegrambotapi = "4.17.0"
pytaf = "1.2.1"
decoder = "0.5"
urllib3 = "2.2.1"
users = "1.0.dev0"
logging = "0.4.9.6"
snowland-apihelper = "^0.0.3"
telegram = "^0.0.1"
flask-limiter = "3.9.2"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
